# pfa

./: .gitignore  Cargo.toml  README.md  design_spec.md
.github/workflows/: rust.yml
makepfa/: Cargo.toml
makepfa/src/: main.rs
pfa/: Cargo.toml
pfa/src/: lib.rs
pfa/src/reader/: mod.rs  pfa_reader.rs
pfa/src/shared/: data_flags.rs  mod.rs  slice_flags.rs
pfa/src/writer/: pfa_builder.rs  pfa_writer.rs
pfadiff/: Cargo.toml
pfadiff/src/: lib.rs  main.rs
src/: lib.rs  main.rs
src/reader/: pfa_reader.rs
src/writer/: mod.rs  pfa_builder.rs  pfa_writer.rs
unpfa/: Cargo.toml
unpfa/src/: main.rs
