[package]
name = "pfa"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.10.3"
byteorder = "1.5.0"
ignore = "0.4.22"
lz4_flex = "0.11.1"
rand = { version = "0.8.5", features = ["getrandom"] }
rand_chacha = "0.3.1"
reed-solomon = "0.2.1"
thiserror = "1.0.50"
